Thu Feb 19 18:40:01 2004  Tim Janik  <timj@gtk.org>

	* glib/gstring.[hc]: for G_CAN_INLINE environments, inline
	g_string_append_c() for efficiency. (vaguely based on #118707).

Wed Feb 18 23:57:42 2004  Matthias Clasen  <maclas@gmx.de>

	* glib/gmain.c: Include signal.h for SIGCHLD.  (#134622, Damien
	Carbery)

2004-02-18  Sebastian Wilhelmi  <seppi@seppi.de>

	* glib/gasyncqueue.c: Lazy creation of GCond. Only
	signal GCond, if threads are waiting.

	* glib/gmain.c (g_main_context_new): Set context->wake_up_pipe
	only for G_THREADS_ENABLED.

Sat Feb 14 11:05:26 2004  Manish Singh  <yosh@gimp.org>

	* configure.in: Remove unnecessary STRIP_* definitions, and GNU
	make check. Really fixes #134102.

Sat Feb 14 02:11:08 2004  Matthias Clasen  <maclas@gmx.de>

	* configure.in: Make the check for GNU make work when MAKE is a 
	full path.  (#134102, Julio M. Merino Vidal)

Sat Feb 14 02:08:03 2004  Matthias Clasen  <maclas@gmx.de>

	* configure.in: Suppress xsltproc and xmlcatalog checks
	if enable_man=no.  (#134091, Julio M. Merino Vidal)

Sat Feb 14 01:21:34 2004  Matthias Clasen  <maclas@gmx.de>

	* glib/gmain.h: 
	* glib/gmain.c (g_child_watch_source_new): 
	* glib/gmain.c (g_child_watch_add): 
	* glib/gmain.c (g_child_watch_add_full): Wrap waitpid() as a
	GSource. This is a partial implementation of the "Unix signal 
	source".  (#50296, Jonathan R. Blandford)

	* configure.in: Add the necessary configury to typedef GPid
	appropriately.

	* tests/Makefile.am:
	* tests/child-test.c: Test child_watch sources.

Sat Feb  7 15:02:01 2004  Manish Singh  <yosh@gimp.org>

	* tests/type-test.c: Fix broken test for gsize formats.

2004-02-05  Robert Sedak  <robert.sedak@sk.htnet.hr>

        * configure.in: Added "hr" (Croatian) to ALL_LINGUAS.

Wed Feb  4 17:58:51 2004  Manish Singh  <yosh@gimp.org>

	* glib/gcompletion.h: Add prototype for g_completion_complete_utf8().

	* tests/completion-test.c: #include <string.h>

2004-02-05  Tor Lillqvist  <tml@iki.fi>
