@@ -1,3 +1,9 @@
+Fri Feb 20 02:39:03 2004  Tim Janik  <timj@gtk.org>
+
+	* applied patch from David Schleef <ds@schleef.org> which implements
+	a G_MODULE_BIND_LOCAL flag to g_module_open() to disable global
+	symbol registration.
+
 Thu Feb 19 18:40:01 2004  Tim Janik  <timj@gtk.org>
 
 	* glib/gstring.[hc]: for G_CAN_INLINE environments, inline
