@@ -108,8 +108,8 @@ eventually that fails as well, %NULL is returned.
 </para>
 
 @file_name: the name of the file containing the module.
-@flags: the flags used for opening the module. Currently this can be 0 or
-#G_MODULE_BIND_LAZY for lazy binding, where symbols are only bound when needed.
+@flags: the flags used for opening the module. This can be the logical
+OR of any of the #GModuleFlags.
 @Returns: a #GModule on success, or %NULL on failure.
 
 
@@ -119,9 +119,15 @@ Flags passed to g_module_open().
 #G_MODULE_BIND_LAZY specifies that symbols are only resolved when needed.
 The default action is to bind all symbols when the module is loaded.
 (#G_MODULE_BIND_LAZY is not supported on all platforms.)
+#G_MODULE_BIND_LOCAL specifies that symbols in the module should
+not be added to the global name space.  The default action on most
+platforms is to place symbols in the module in the global name space,
+which may cause conflicts with existing symbols.
+(#G_MODULE_BIND_LOCAL is not supported on all platforms.)
 </para>
 
 @G_MODULE_BIND_LAZY: 
+@G_MODULE_BIND_LOCAL: 
 @G_MODULE_BIND_MASK: 
 
 <!-- ##### FUNCTION g_module_symbol ##### -->
